css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; } 

html {
    box-sizing: border-box;
    background-color: #d8d8d8;
    font-size: 1em;
    
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    text-size-adjust: 100%;
    font-family: 'Josefin Slab', serif;
} 

*, *::before, *::after {
    box-sizing: inherit;
}

body {
    margin: 0;
}

.navigation a {
    display: inline-block;
    text-align: center;
    text-decoration: none;
    font-family: 'Josefin Sans', sans-serif;
    color: #696666;
    font-size: 1.25em;
}

.navigation a:hover {
    color: #9b9b9b;
}

.skip-links {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.skip-links a {
    position: absolute;
    top: -4em;
    background-color: #000;
    color: #fff;
    text-decoration: none;
    padding: 0.5em 0.75em;
    font-size: 1.5em;
}

p {
    padding: 5%;
    margin-bottom: 0;

}

.contact {
    margin: 0 auto;
    padding-left: calc(50% - 155px)
}

.email {
    text-decoration: none;
    padding-left: calc(50% - 65px);
    font-family: 'Josefin Sans', sans-serif;
    color: #696666;
}

.email:hover {
    color: #9b9b9b;
}
    
.socialmedia {
    width: 80px;
    margin: 10px;
    display: inline;
}

.link {
    text-decoration: none;
}

h1 {
    padding: 10px;
    background-color: #fee;
    margin-top: 10px;
    margin-bottom: 0;
    font-family: 'Josefin Sans', sans-serif;
}

.backtotop {
    width: 70px;
    height: 70px;
    border-radius: 35px;
    float: right;
    background-color:#fee;
    margin: 10px;
    text-decoration: none;
    text-align: center;
    padding-top: 15px;
    font-family: 'Josefin Sans', sans-serif;
    color: #696666;
}

.backtotop:hover {
    color: #9b9b9b;
}

.copyright {
    padding: 0;
    margin: 10px;
}

.images {
    width:100%;
}
.copyright {
    position: absolute;
    
}

@media only screen and (min-width: 38em) {
    
    .portrait {
        padding-left: calc(50% - 155px);
        max-width: 35em;
        min-width: 30em;
        margin: 0 auto;
    }
}

@media only screen and (min-width: 60em) {
    
    .portrait {
        padding-left: calc(50% - 450px);
        max-width: 45em;
        min-width: 40em;
    }
    
    .wordmark {
        max-height: 15em;
    }
}

